refactor: clean JWT authentication filter